-[BACKEND] Create the new database adapter to connect to the liquibase updateable database implementation. Forget about the old Helper that should not have any application functionality. -[BACKEND] Remove the Component Factory until required.
Former-commit-id: 283d51d7905230574f88bfc0af1477280ea02d02

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -12,7 +12,9 @@
 .gradle/
 build/
 backend/build/
-baeckend.AcceptanceTest/build/
+backend/out/
+backend.AcceptanceTest/build/
+backend.AcceptanceTest/out/
 
 # Project not required files set to be ignored
 backend/libs/
