-[ACCEPTANCE] Configured the module and added dependencies and support code.
Former-commit-id: f096bd5df10eb3a3cff0623935c0d1a535be1f25

--- a/NeoCom.Infinity.Backend/backend-AcceptanceTest/build.gradle
+++ b/NeoCom.Infinity.Backend/backend-AcceptanceTest/build.gradle
@@ -1,8 +1,20 @@
-apply plugin: 'java-library'
+// - P L U G I N S
+apply plugin: 'java'
+apply plugin: 'project-report'
+apply plugin: 'jacoco'
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-}
-
+group = 'org.dimensinfin.eveonline'
+version = '0.16.0'
+archivesBaseName = 'NeoCom.Infinity.Backend.AcceptanceTest'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+// - A D D I T I O N A L   C O N F I G U R A T I O N
+apply from: './dependencies.gradle'
+
+sourceSets {
+    test.java {
+        srcDirs += "src/test/java-steps"
+        srcDirs += "src/test/java-support"
+    }
+}
