--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -4,6 +4,7 @@
 .idea/workspace.xml
 .idea/navEditor.xml
 .idea/assetWizardSettings.xml
+.idea/sonarIssues.xml
 .idea/caches/
 .idea/libraries/
 .idea/sonarlint/
@@ -13,8 +14,8 @@
 build/
 backend/build/
 backend/out/
-backend.AcceptanceTest/build/
-backend.AcceptanceTest/out/
+backend-AcceptanceTest/build/
+backend-AcceptanceTest/out/
 
 # Project not required files set to be ignored
 backend/libs/
