--- a/NeoCom.Infinity.Backend/backend/src/main/resources/application-dev.yml
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/application-dev.yml
@@ -18,3 +18,8 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         temp:
           use_jdbc_metadata_defaults: false
+P:
+  runtime:
+    configuration:
+      properties:
+        path: properties-conf
