--- a/NeoCom.Infinity.Backend/backend-AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend-AcceptanceTest/dependencies.gradle
@@ -1,6 +1,7 @@
 // - P R O D U C T   V E R S I O N S
 ext {
     springBootVersion = '2.1.8.RELEASE'
+    springCloudVersion = '2.1.2.RELEASE'
     jodaTimeVersion = '2.3'
     loggerVersion = '1.7.26'
     retrofitVersion = '2.5.0'
