--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -41,10 +41,10 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.2.5'
     implementation 'org.liquibase:liquibase-core:3.8.0'
     // - M E T R I C S
-    implementation "io.micrometer:micrometer-core:$micrometerVersion"
-    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
-    implementation 'com.keyholesoftware:khs-spring-boot-api-statistics-starter:1.0.1'
-    implementation 'io.springfox:springfox-swagger2:2.6.1'
+//    implementation "io.micrometer:micrometer-core:$micrometerVersion"
+//    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
+//    implementation 'com.keyholesoftware:khs-spring-boot-api-statistics-starter:1.0.1'
+//    implementation 'io.springfox:springfox-swagger2:2.6.1'
 
     // N E O C O M
     implementation files('libs/jeveassets.3.1.2.jar')
