-[BACKEND] Adding the properties configuration from the dependency library.
Former-commit-id: 9a8c0c8fa6e56f4f6bdec0b8213ef502b7b35168

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -16,6 +16,7 @@ backend/build/
 backend/out/
 backend-AcceptanceTest/build/
 backend-AcceptanceTest/out/
+backend-AcceptanceTest/target/
 
 # Project not required files set to be ignored
 backend/libs/
