--- a/NeoCom.Infinity.Backend/backend/build.gradle
+++ b/NeoCom.Infinity.Backend/backend/build.gradle
@@ -14,3 +14,4 @@ targetCompatibility = 1.8
 
 // - A D D I T I O N A L   C O N F I G U R A T I O N
 apply from: './dependencies.gradle'
+apply from: './tasks.gradle'
