-[CONFIGURATION] Added the Data Management properties.
Former-commit-id: ee82a68408b3f8b4c0a3bac9576d43c25d692973

--- a/NeoCom.Infinity.Backend/backend/src/main/resources/application.yml
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/application.yml
@@ -2,6 +2,15 @@
 server:
   port: 9000
 
+# - A C T U A T O R
+management:
+  endpoints:
+    httptrace:
+      enabled: true
+      sensitive: false
+  trace:
+    include: request-headers,response-headers,cookies,errors,parameters
+
 #  - D A T A B A S E
 spring:
   datasource:
