-[BACKEND] Create the exception framework to create exceptions from a table of error definitions. This place will store the error messages and compose and report more exception information. -[BACKEND] Intercept exceptions at the top level and transform them into a Json informational response for the frontend caller.
Former-commit-id: b28ebe74739f77f54bf516a386475945b8aee669

--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+
     // D A T A B A S E - R E D I S
     implementation 'org.redisson:redisson:3.8.2'
     implementation 'com.vladmihalcea:hibernate-types-52:2.4.2'
