-[BUG] Fixed the authorization validation code. Refactored to use the configured server and fixed the oauth version 2 requirements.
Former-commit-id: 6077b35cb94f7663bc87e5eda0bc3ffd43a0a8fe

--- a/NeoCom.Infinity.Backend/backend/src/main/resources/application.yml
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/application.yml
@@ -5,11 +5,13 @@ server:
 # - A C T U A T O R
 management:
   endpoints:
+    enabled-by-default: true
     httptrace:
       enabled: true
       sensitive: false
-  trace:
+    trace:
     include: request-headers,response-headers,cookies,errors,parameters
+
 
 #  - D A T A B A S E
 spring:
