-[BUG] Fixed the ESI application configuration.
Former-commit-id: e3748983b66d410aee1f49b376fd0a9df609345c

--- a/NeoCom.Infinity.Backend/backend/src/main/resources/properties/databasedefinition.properties
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/properties/databasedefinition.properties
@@ -2,6 +2,6 @@
 P.database.neocom.databasehost=jdbc:postgresql://localhost:5432
 P.database.neocom.databasetype=postgres
 P.database.neocom.databasepath=postgres
-P.database.neocom.databaseuser=NEOCOM
+P.database.neocom.databaseuser=neocom
 P.database.neocom.databasepassword=01.Alpha
 P.database.neocom.databaseoptions=
