--- a/NeoCom.Infinity.Backend/backend/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend/dependencies.gradle
@@ -1,7 +1,27 @@
+// - S P R I N G B O O T
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+ext {
+    set('springCloudVersion', "Greenwich.SR2")
+}
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
 // - P R O D U C T   V E R S I O N S
 ext {
-    springBootVersion = '2.1.8.RELEASE'
-    springCloudVersion = '2.1.2.RELEASE'
+//    springBootVersion = '2.1.8.RELEASE'
+//    springCloudVersion = '2.1.2.RELEASE'
     jodaTimeVersion = '2.3'
     loggerVersion = '1.7.26'
     retrofitVersion = '2.5.0'
@@ -12,14 +32,14 @@ ext {
 }
 
 // - S P R I N G B O O T
-dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
-    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
-//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
-//    implementation "io.github.resilience4j:resilience4j-circuitbreaker:0.17.0"
-}
+//dependencies {
+//    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
+//    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
+//    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
+////	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:$springCloudVersion"
+////    implementation "io.github.resilience4j:resilience4j-circuitbreaker:0.17.0"
+//}
 
 // - D E P E N D E N C I E S
 dependencies {
@@ -33,6 +53,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+    implementation 'com.auth0:java-jwt:3.3.0'
 
     // D A T A B A S E - R E D I S
     implementation 'org.redisson:redisson:3.8.2'
@@ -59,7 +80,8 @@ dependencies {
 // - U N I T   T E S T I N G
 dependencies {
     // - S P R I N G B O O T
-    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
     testImplementation 'com.h2database:h2:1.4.194'
 
     // - C O R E
