--- a/NeoCom.Infinity.Backend/backend/src/main/resources/application.properties
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-management.endpoints.enabled-by-default=true
-management.endpoints.web.exposure.include=*
 server.port=9200
+server.name=poc.backend
+management.endpoints.web.expose=*
