--- a/NeoCom.Infinity.Backend/backend/src/main/resources/properties/esiauthorization.tranquility.properties
+++ b/NeoCom.Infinity.Backend/backend/src/main/resources/properties/esiauthorization.tranquility.properties
@@ -1,6 +1,6 @@
 # - DEFINITION FOR THE TRANQUILITY SERVER - ANDROID APPLICATION
 # - NEOCOM ANDROID - DEVELOPMENT
-P.esi.tranquility.authorization.server=https://login.eveonline.com/
+P.esi.tranquility.authorization.server=http://localhost:6090
 P.esi.tranquility.authorization.clientid=eacaa9cd36594189877544d851753734
 P.esi.tranquility.authorization.secretkey=F5SGN1sUhlpgoNwniJxiShzHEC53GDEBaQsHG0jG
 P.esi.tranquility.authorization.callback=http://neocominfinity.poc/ui/loginValidation
