--- a/NeoCom.Infinity.Backend/backend/src/test/resources/docker/docker-compose.yml
+++ b/NeoCom.Infinity.Backend/backend/src/test/resources/docker/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
-  postgres:
+  postgres-dev:
+    container_name: postgres
     image: "postgres:11.2"
     ports:
       - "5432:5432"
