-[TESTING] Replace Mountebank by ApiSimulator. -[BACKEND] Tested the application againd the mocked ESI server.
Former-commit-id: 07a258eb510cc0270728e58cb0a4b81540652e76

--- a/NeoCom.Infinity.Backend/backend-AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend-AcceptanceTest/dependencies.gradle
@@ -66,6 +66,7 @@ dependencies {
 dependencies {
     // - S P R I N G B O O T
     testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
+    testImplementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
 //    testImplementation 'com.h2database:h2:1.4.194'
 
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
