--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -5,5 +5,9 @@
 .idea/caches/
 .idea/libraries/
 
+# Compilation ignorable directories
 .gradle/
 build/
+backend.App/build/
+backend.AcceptanceTest/build/
+
