--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/build.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/build.gradle
@@ -3,18 +3,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
-apply plugin: 'project-report'
 
-group = 'org.dimensinfin.eveonline'
+group = 'org.dimensinfin.eveonline.neocom'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
-
-configurations {
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
-}
+targetCompatibility = '11'
 
 repositories {
     mavenLocal()
@@ -24,63 +17,11 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url "https://kotlin.bintray.com/kotlinx/" }
 }
-
-// - P R O D U C T   V E R S I O N S
-ext {
-//    springBootVersion = '2.1.8.RELEASE'
-//    springCloudVersion = '2.1.2.RELEASE'
-    jodaTimeVersion = '2.3'
-    loggerVersion = '1.7.26'
-    retrofitVersion = '2.5.0'
-    jacksonVersion = '2.9.8'
-    ormliteVersion = '4.48'
-    micrometerVersion = '1.1.0'
-    resilience4jVersion = '0.17.0'
-}
-ext {
-    set('springCloudVersion', "Greenwich.SR2")
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'org.liquibase:liquibase-core'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
     }
 }
 
-// - C U C U M B E R
-ext {
-    cucumberVersion = '4.3.0'
-}
-dependencies {
-    testImplementation "io.cucumber:cucumber-java:$cucumberVersion"
-    testImplementation "io.cucumber:cucumber-junit:$cucumberVersion"
-    testImplementation "io.cucumber:cucumber-picocontainer:$cucumberVersion"
-
-    testImplementation "joda-time:joda-time:$jodaTimeVersion"
-    testImplementation 'org.apache.commons:commons-lang3:3.9'
-    testImplementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    testImplementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
-    testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
-
-    testImplementation 'org.dimensinfin:CoreBase.core:3.2.0'
-    testImplementation 'org.dimensinfin:NeoCom.DataManagement:0.15.2'
-}
-
-sourceSets {
-    test.java {
-        srcDirs += "src/test/java-steps"
-        srcDirs += "src/test/java-support"
-    }
-}
+apply from: './dependencies.gradle'
