--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
@@ -1,21 +1,3 @@
-// - C U C U M B E R
-ext {
-    cucumberVersion = '4.3.0'
-}
-dependencies {
-//    testImplementation "io.cucumber:cucumber-jvm:$cucumberVersion"
-    testImplementation "io.cucumber:cucumber-java:$cucumberVersion"
-    testImplementation "io.cucumber:cucumber-junit:$cucumberVersion"
-    testImplementation "io.cucumber:cucumber-picocontainer:$cucumberVersion"
-}
-
-// - S P R I N G B O O T
-//dependencies {
-//    implementation "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
-//    implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-//    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
-//}
-
 // - P R O D U C T   V E R S I O N S
 ext {
 //    springBootVersion = '2.1.8.RELEASE'
@@ -30,80 +12,49 @@ ext {
 }
 
 // - S P R I N G B O O T
-dependencies {
-    testImplementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+ext {
+    set('springCloudVersion', "Greenwich.SR2")
 }
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+//    implementation 'org.liquibase:liquibase-core'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//    runtimeOnly 'org.postgresql:postgresql'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
-// - D E P E N D E N C I E S
+// - C U C U M B E R
+ext {
+    cucumberVersion = '4.3.0'
+}
 dependencies {
-    // C O R E
-    testImplementation 'net.logstash.logback:logstash-logback-encoder:4.11'
+    testImplementation "io.cucumber:cucumber-java:$cucumberVersion"
+    testImplementation "io.cucumber:cucumber-junit:$cucumberVersion"
+    testImplementation "io.cucumber:cucumber-picocontainer:$cucumberVersion"
+
     testImplementation "joda-time:joda-time:$jodaTimeVersion"
     testImplementation 'org.apache.commons:commons-lang3:3.9'
+    testImplementation 'com.squareup.okhttp3:okhttp:3.12.0'
     testImplementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
-    testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
+    testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
 
-    testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
-// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
-//    testImplementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.0'
-//// https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
-//    testImplementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-//// https://mvnrepository.com/artifact/javax.annotation/jsr305
-//    testImplementation group: 'javax.annotation', name: 'jsr305', version: '0.1'
-
-//    implementation "joda-time:joda-time:$jodaTimeVersion"
-//    implementation 'commons-lang:commons-lang:2.6'
-//    implementation 'commons-codec:commons-codec:1.11'
-//    implementation 'com.annimon:stream:1.1.9'
-//    // HTTP encapsulation and swagger support
-//    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
-//    // D A T A B A S E - R E D I S
-//    implementation 'org.redisson:redisson:3.8.2'
-//    implementation 'com.vladmihalcea:hibernate-types-52:2.4.2'
-//    // D A T A B A S E
-//    implementation "com.j256.ormlite:ormlite-jdbc:$ormliteVersion"
-//    implementation 'javax.persistence:javax.persistence-api:2.2'
-//    implementation 'org.postgresql:postgresql:42.2.5'
-//    implementation 'org.liquibase:liquibase-core:3.8.0'
-    // - M E T R I C S
-//    implementation "io.micrometer:micrometer-core:$micrometerVersion"
-//    implementation "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
-//    implementation 'com.keyholesoftware:khs-spring-boot-api-statistics-starter:1.0.1'
-//    implementation 'io.springfox:springfox-swagger2:2.6.1'
-
-    // N E O C O M
-//    implementation files('libs/jeveassets.3.1.2.jar')
-//    implementation 'org.dimensinfin:CoreBase.core:3.2.0'
     testImplementation 'org.dimensinfin:CoreBase.core:3.2.0'
-//    implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
-//    implementation 'org.dimensinfin:NeoCom.DataManagement:0.15.2'
     testImplementation 'org.dimensinfin:NeoCom.DataManagement:0.15.2'
-//    implementation project(':backend.App')
-//    testImplementation project(':backend.App')
 }
 
-// - U N I T   T E S T I N G
-//dependencies {
-//    // - S P R I N G B O O T
-//    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
-//    testImplementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-////    testImplementation 'com.h2database:h2:1.4.194'
-//
-//    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
-//    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
-//
-//    // - C O R E
-//    testImplementation 'junit:junit:4.12'
-////    testImplementation "org.slf4j:slf4j-simple:$loggerVersion"
-//    testImplementation "joda-time:joda-time:$jodaTimeVersion"
-//    testImplementation 'org.apache.commons:commons-lang3:3.9'
-//    testImplementation 'com.openpojo:openpojo:0.8.12'
-//    testImplementation 'org.awaitility:awaitility:3.1.6'
-//    testImplementation 'org.mockito:mockito-core:2.23.4'
-//}
+sourceSets {
+    test.java {
+        srcDirs += "src/test/java-steps"
+        srcDirs += "src/test/java-support"
+    }
+}
