-[FRONTEND] Create shell script to start/stop support services and mock servers.
Former-commit-id: d2306b146f287deee0a57d8c1f13c23ddb32973d

--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -1,5 +1,11 @@
+# Generic inginable files
+*.log
+
 # Node ignored contents
 node_modules/
+
+# Mock ignored files
+support/apisimulator/apisimulator-http-1.4/
 
 # Project generated ignored files
 .tmp/
