--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "ng lint",
     "compodoc": "compodoc -p tsconfig.json --theme laravel",
     "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
+    "start:support": "bash ./support/support-services.sh start",
+    "stop:support": "bash ./support/support-services.sh stop",
     "start:dev": "ng serve --progress --proxy-config proxy.conf.json",
     "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json",
     "build:dev": "ng build",
@@ -21,14 +23,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.3",
-    "@angular/common": "~8.2.3",
-    "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
-    "@angular/forms": "~8.2.3",
-    "@angular/platform-browser": "~8.2.3",
-    "@angular/platform-browser-dynamic": "~8.2.3",
-    "@angular/router": "~8.2.3",
+    "@angular/animations": "8.2.3",
+    "@angular/common": "8.2.3",
+    "@angular/compiler": "8.2.3",
+    "@angular/core": "8.2.3",
+    "@angular/forms": "8.2.3",
+    "@angular/platform-browser": "8.2.3",
+    "@angular/platform-browser-dynamic": "8.2.3",
+    "@angular/router": "8.2.3",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
     "ng-drag-drop": "5.0.0",
@@ -52,14 +54,14 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "1.4.0",
     "@types/chai": "4.2.2",
     "@types/cucumber": "4.0.7",
     "chai": "4.2.0",
     "protractor-cucumber-framework": "6.1.3",
     "protractor": "5.4.0",
-    "protractor-console-plugin": "^0.1.1",
-    "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.1",
+    "protractor-console-plugin": "0.1.1",
+    "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
     "ts-node": "7.0.0",
     "tslint": "5.15.0",
     "typescript": "3.5.3"
