--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -10,9 +10,10 @@
     "compodoc": "compodoc -p tsconfig.json --theme laravel",
     "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
     "start:support": "bash ./support/support-services.sh start",
-    "stop:support": "bash ./support/support-services.sh stop",
     "start:dev": "ng serve --progress --proxy-config proxy.conf.json",
     "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json",
+    "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
+    "stop:support": "bash ./support/support-services.sh stop",
     "build:dev": "ng build",
     "build:prod": "ng build --aot --prod --configuration production",
     "test:dev": "ng test --code-coverage --source-map --watch --progress ",
@@ -31,9 +32,12 @@
     "@angular/platform-browser": "8.2.3",
     "@angular/platform-browser-dynamic": "8.2.3",
     "@angular/router": "8.2.3",
+    "angular-webstorage-service": "1.0.2",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
     "ng-drag-drop": "5.0.0",
+    "ngx-toastr": "10.2.0",
+    "rollbar": "2.13.0",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
