-[FRONTEND] Configure the modules to be used on the application and create the base startup app component code.
Former-commit-id: bd3fa02c4439cbf4624d649e04f85f7f81fa21e8

--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -6,6 +6,8 @@ node_modules/
 
 # Mock ignored files
 support/apisimulator/apisimulator-http-1.4/
+# Ignore assets not to be included on the repository
+src/assets/fonts/
 
 # Project generated ignored files
 .tmp/
