--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
     "ng-drag-drop": "5.0.0",
+    "ng6-toastr-notifications": "1.0.4",
     "ngx-toastr": "10.2.0",
     "rollbar": "2.13.0",
     "rxjs": "6.4.0",
