--- a/NeoCom.Infinity.Frontend/.gitignore
+++ b/NeoCom.Infinity.Frontend/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 support/apisimulator/apisimulator-http-1.4/
 # Ignore assets not to be included on the repository
 src/assets/fonts/
+src/styles/fonts/
 
 # Project generated ignored files
 .tmp/
