--- a/NeoCom.Infinity.Frontend/e2e/tsconfig.json
+++ b/NeoCom.Infinity.Frontend/e2e/tsconfig.json
@@ -8,6 +8,9 @@
       "jasmine",
       "jasminewd2",
       "node"
-    ]
+    ],
+    "paths": {
+      "@pages/*": ["src/pages/*"]
+    }
   }
 }
