-[FRONTEND] Written the code to call the backend and process a valid response. -[FRONTEND] Added service code to perform calls to the mock server using the proxy tunnel. -[FRONTEND] Added a minor exception handling.
Former-commit-id: 7b130e3210a1bc927dca7abfee0c86496ca7b9fb

--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -14,6 +14,7 @@
     "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json",
     "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
     "stop:support": "bash ./support/support-services.sh stop",
+    "restart:support": "npm run stop:support && npm run start:support",
     "build:dev": "ng build",
     "build:prod": "ng build --aot --prod --configuration production",
     "test:dev": "ng test --code-coverage --source-map --watch --progress ",
