-[FRONTEND] Added the code to process the backend response with the token validation
Former-commit-id: 5b22967c6f7786de94eb8b46b563b5b35fe1d6ad

--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -36,6 +36,7 @@
     "angular-webstorage-service": "1.0.2",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
+    "jwt-decode": "2.2.0",
     "ng-drag-drop": "5.0.0",
     "ng6-toastr-notifications": "1.0.4",
     "ngx-toastr": "10.2.0",
