-[NIF01.03]-Check that the Login Validation Page has all only two panels when correct parameters and that should return a valid JWT token along a Credential. -[TESTING] Added the code coverage for the new developed code.
Former-commit-id: f4cfc41013210253e95a3fbcc0ef4ef49c3323ba

--- a/NeoCom.Infinity.Frontend/e2e/tsconfig.json
+++ b/NeoCom.Infinity.Frontend/e2e/tsconfig.json
@@ -10,7 +10,8 @@
       "node"
     ],
     "paths": {
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@domain/*": ["src/app/domain/*"]
     }
   }
 }
