-[BACKEND] Use the Singularity server for testing while keep the real configuration for the Tranquility server.
Former-commit-id: 7024f0b56efc43a9161daba1dc01ae735243c6e3

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -1,3 +1,6 @@
+# Heroku git repository ignored
+backend.App/.git-heroku/
+
 # IntelliJ Idea ignorable files and directories
 *.iml
 .idea/workspace.xml
