--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties/esiauthorization.singularity.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties/esiauthorization.singularity.properties
@@ -1,8 +1,8 @@
 # - DEFINITION FOR THE SINGULARITY SERVER
-# - NEOCOM TEST - ANDROID
-P.esi.singularity.authorization.server=https://sisilogin.testeveonline.com/v2/
-P.esi.singularity.authorization.clientid=2084b05388ac4cc99052acfaf70992bb
-P.esi.singularity.authorization.secretkey=5wjbaODadIeGzS6grxdMToiS0JZycqTjRbkqfqwP
-P.esi.singularity.authorization.callback=eveauth-neocom://esiauthentication
-P.esi.singularity.authorization.agent=org.dimensinfin.eveonline.neocom; Dimensinfin Industries; Singularity Testing
+# - APISIMULATOR
+P.esi.singularity.authorization.server=http://localhost:6090
+P.esi.singularity.authorization.clientid=eacaa9cd36594189877544d851753734
+P.esi.singularity.authorization.secretkey=F5SGN1sUhlpgoNwniJxiShzHEC53GDEBaQsHG0jG
+P.esi.singularity.authorization.callback=http://localhost:4200/app/loginValidation
+P.esi.singularity.authorization.agent=org.dimensinfin.eveonline.neocom.infinity; Dimensinfin Industries; Spring Boot
 P.esi.singularity.authorization.scopes.filename=esiconf/ESINetworkScopes.Singularity.txt
