--- a/NeoCom.Infinity.Backend/backend.App/src/test/resources/properties/runtime.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/test/resources/properties/runtime.properties
@@ -1,4 +1,4 @@
 P.runtime.healthcheck.smoke=-READY-
 P.runtime.logging.request.headers=false
-P.runtime.configuration.properties.path=properties
+P.runtime.configuration.properties.path=properties.test
 P.runtime.filesystem.application.directory=./NeoCom.Infinity
