--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/application.yml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/application.yml
@@ -23,4 +23,7 @@ P:
   runtime:
     configuration:
       properties:
-        path: properties-conf
+        path: properties
+    filesystem:
+      application:
+        directory: ./NeoCom.Infinity
