--- a/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
@@ -1,7 +1,5 @@
 // - P R O D U C T   V E R S I O N S
 ext {
-//    springBootVersion = '2.1.8.RELEASE'
-//    springCloudVersion = '2.1.2.RELEASE'
     jodaTimeVersion = '2.3'
     loggerVersion = '1.7.26'
     retrofitVersion = '2.5.0'
@@ -34,29 +32,31 @@ dependencies {
     implementation 'net.logstash.logback:logstash-logback-encoder:4.11'
     implementation "joda-time:joda-time:$jodaTimeVersion"
     implementation 'org.apache.commons:commons-lang3:3.9'
-    implementation 'commons-codec:commons-codec:1.11'
+//    implementation 'commons-codec:commons-codec:1.11'
     implementation 'com.annimon:stream:1.1.9'
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
+////    implementation "com.fasterxml.jackson.datatype:jackson-datatype-joda:$jacksonVersion"
+////    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     implementation 'com.auth0:java-jwt:3.3.0'
-    // - D A T A B A S E
+//    // - D A T A B A S E
     implementation "com.j256.ormlite:ormlite-jdbc:$ormliteVersion"
-//    implementation 'javax.persistence:javax.persistence-api:2.2'
+////    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.postgresql:postgresql:42.2.5'
     implementation 'org.liquibase:liquibase-core:3.8.0'
-    implementation 'com.h2database:h2:1.4.194'
-    // - R E D I S
-    implementation 'org.redisson:redisson:3.8.2'
+//    implementation 'com.h2database:h2:1.4.194'
+//    // - R E D I S
+//    implementation 'org.redisson:redisson:3.8.2'
     // -  N E O C O M
     implementation 'org.dimensinfin:CoreBase.core:3.2.0'
-    implementation 'org.dimensinfin:NeoCom.DataManagement:0.15.2'
+//    implementation 'org.dimensinfin:CoreBase.core:3.1.0'
+//    implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
+    implementation 'org.dimensinfin:NeoCom.DataManagement:0.16.0'
 }
 
 // - U N I T   T E S T I N G
-dependencies {
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+//dependencies {
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//}
 
