-[TESTING] Defining configuration for spring boot testing.
Former-commit-id: 8b8cc0ac2388fd898d494d05fd10ecabdbf6d4a2

--- a/NeoCom.Infinity.Backend/backend.App/build.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/build.gradle
@@ -25,4 +25,10 @@ configurations {
     }
 }
 
+sourceSets {
+    test.java {
+        srcDirs += 'src/test/springBoot'
+    }
+}
+
 apply from: './dependencies.gradle'
