-[BACKEND] Show the path from where I read the configuration properties. -[REFACTOR] Updated adapters names.
Former-commit-id: eb9b3b27c90fec5c89f6013a0da595b89575fd4e

--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
@@ -9,9 +9,8 @@ P:
       application:
         directory: ./NeoCom.Infinity.development
 neocom:
-  database:
-    neocom:
-      databasehost: "jdbc:postgresql://localhost:5432"
-      databasepath: postgres
-      databaseuser: neocom
-      databasepassword: 01.Alpha
+  sde:
+    database:
+      schema: "jdbc:sqlite:"
+      path: "backend.App/build/resources/main/"
+      name: sde.db
