--- a/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
@@ -38,9 +38,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     implementation 'com.auth0:java-jwt:3.3.0'
     // - D A T A B A S E
+    implementation 'org.liquibase:liquibase-core:3.8.0'
     implementation "com.j256.ormlite:ormlite-jdbc:$ormliteVersion"
     implementation 'org.postgresql:postgresql:42.2.5'
-    implementation 'org.liquibase:liquibase-core:3.8.0'
+    implementation 'org.xerial:sqlite-jdbc:3.16.1' // Database dependency to read sde sqlite database.
     // - R E D I S
 //    implementation 'org.redisson:redisson:3.8.2'
     // -  N E O C O M
@@ -50,6 +51,8 @@ dependencies {
 
 // - U N I T   T E S T I N G
 dependencies {
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
 }
 
