--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -14,3 +14,5 @@ build/
 backend.App/build/
 backend.AcceptanceTest/build/
 
+# Ignore application cache directories from runs
+NeoCom.Infinity.development/
