--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.singularity.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.singularity.properties
@@ -1,8 +1,8 @@
-# - DEFINITION FOR THE SINGULARITY SERVER
-# - APISIMULATOR
+# - DEFINITION FOR THE TRANQUILITY SERVER - SPRING BOOT APPLICATION
+# - NEOCOM INFINITY SPRING BOOT - APISIMULATOR DEVELOPMENT
 P.esi.singularity.authorization.server=http://localhost:6090
-P.esi.singularity.authorization.clientid=eacaa9cd36594189877544d851753734
-P.esi.singularity.authorization.secretkey=F5SGN1sUhlpgoNwniJxiShzHEC53GDEBaQsHG0jG
-P.esi.singularity.authorization.callback=http://localhost:4200/app/loginValidation
-P.esi.singularity.authorization.agent=org.dimensinfin.eveonline.neocom.infinity; Dimensinfin Industries; Spring Boot
-P.esi.singularity.authorization.scopes.filename=esiconf/ESINetworkScopes.Singularity.txt
+P.esi.singularity.authorization.clientid=--cclliieennttiidd--
+P.esi.singularity.authorization.secretkey=FFTTHHIISSIISSTTHHEESSEECCRREETTFF
+P.esi.singularity.authorization.callback=http://neocominfinity.poc/app/loginValidation
+P.esi.singularity.authorization.agent=Dimensinfin Industries 2019 : Spring Boot 2 backend client : Development
+P.esi.singularity.authorization.scopes.filename=esiconf/ESINetworkScopes.Tranquility.txt
