--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.tranquility.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.tranquility.properties
@@ -1,8 +1,8 @@
-# - DEFINITION FOR THE TRANQUILITY SERVER - ANDROID APPLICATION
-# - NEOCOM ANDROID - DEVELOPMENT
-P.esi.tranquility.authorization.server=https://login.eveonline.com/
-P.esi.tranquility.authorization.clientid=eacaa9cd36594189877544d851753734
-P.esi.tranquility.authorization.secretkey=F5SGN1sUhlpgoNwniJxiShzHEC53GDEBaQsHG0jG
-P.esi.tranquility.authorization.callback=http://neocominfinity.poc/ui/loginValidation
-P.esi.tranquility.authorization.agent=org.dimensinfin.eveonline.neocom.infinity; Dimensinfin Industries; Spring Boot
+# - DEFINITION FOR THE TRANQUILITY SERVER - SPRING BOOT APPLICATION
+# - NEOCOM INFINITY SPRING BOOT - APISIMULATOR DEVELOPMENT
+P.esi.tranquility.authorization.server=http://localhost:6090
+P.esi.tranquility.authorization.clientid=--cclliieennttiidd--
+P.esi.tranquility.authorization.secretkey=FFTTHHIISSIISSTTHHEESSEECCRREETTFF
+P.esi.tranquility.authorization.callback=http://neocominfinity.poc/app/loginValidation
+P.esi.tranquility.authorization.agent=Dimensinfin Industries 2019 : Spring Boot 2 backend client : Development
 P.esi.tranquility.authorization.scopes.filename=esiconf/ESINetworkScopes.Tranquility.txt
