--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties/esiauthorization.tranquility.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties/esiauthorization.tranquility.properties
@@ -1,8 +1,8 @@
-# - DEFINITION FOR THE TRANQUILITY SERVER - ANDROID APPLICATION
-# - NEOCOM ANDROID - DEVELOPMENT
+# - DEFINITION FOR THE TRANQUILITY SERVER - SPRING BOOT APPLICATION
+# - NEOCOM INFINITY SPRING BOOT - HEROKU PRODUCTION
 P.esi.tranquility.authorization.server=https://login.eveonline.com/
-P.esi.tranquility.authorization.clientid=eacaa9cd36594189877544d851753734
-P.esi.tranquility.authorization.secretkey=F5SGN1sUhlpgoNwniJxiShzHEC53GDEBaQsHG0jG
-P.esi.tranquility.authorization.callback=http://neocominfinity.poc/ui/loginValidation
-P.esi.tranquility.authorization.agent=org.dimensinfin.eveonline.neocom.infinity; Dimensinfin Industries; Spring Boot
+P.esi.tranquility.authorization.clientid=98eb8d31c5d24649ba4f7eb015596fbd
+P.esi.tranquility.authorization.secretkey=MsuPfxshxxb7saWUJQDdxM7UgSVaHNGFfzp4dM7A
+P.esi.tranquility.authorization.callback=http://neocom-infinity.herokuapp.com/app/loginValidation
+P.esi.tranquility.authorization.agent=Dimensinfin Industries 2019 : Spring Boot 2 backend client : Production
 P.esi.tranquility.authorization.scopes.filename=esiconf/ESINetworkScopes.Tranquility.txt
