-[BACKEND][TESTING] Test the controllers and services using the techniques from other projects.
Former-commit-id: e40ae671dd2d13d499ecbfbf261656824b81bddd

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -12,6 +12,7 @@ backend.App/.git-heroku/
 .gradle/
 build/
 backend.App/build/
+backend.App/coverage/
 backend.AcceptanceTest/build/
 
 # Ignore application cache directories from runs
