-[REFACTOR] Moved the pure java components to another package. -[BACKEND] Updated the components wrappers.
Former-commit-id: 5a06d2d562667ae2ed6d0803869796fbb0fd51ea

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -12,6 +12,7 @@ backend.App/.git-heroku/
 .gradle/
 build/
 backend.App/build/
+backend.App/out/
 backend.App/coverage/
 backend.AcceptanceTest/build/
 
