-[BACKEND] Changed the resulting type for services. Return directly the ResponseEntity.
Former-commit-id: c1905aea9af648c0a1abb0d3ddcee9ac07d56de6

--- a/NeoCom.Infinity.Backend/backend.App/build.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/build.gradle
@@ -26,6 +26,9 @@ configurations {
 }
 
 sourceSets {
+    main.java {
+        srcDirs += 'src/main/java-implementers'
+    }
     test.java {
 //        srcDirs += 'src/test/springBoot'
     }
