--- a/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
@@ -46,6 +46,7 @@ dependencies {
 //    implementation 'org.redisson:redisson:3.8.2'
     // -  N E O C O M
     implementation 'org.dimensinfin:CoreBase.core:3.2.0'
+    implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
     implementation 'org.dimensinfin:NeoCom.DataManagement:0.16.0'
 }
 
