-[BACKEND] Create the endpoint to responde to corporation data request.
Former-commit-id: b9e7afbb6c19e47cf9de3e98596153f141a6af8e

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -15,6 +15,7 @@ backend.App/build/
 backend.App/out/
 backend.App/coverage/
 backend.AcceptanceTest/build/
+backend.AcceptanceTest/target/
 
 # Ignore application cache directories from runs
 NeoCom.Infinity.development/
