--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
@@ -38,6 +38,7 @@ dependencies {
     testImplementation "io.cucumber:cucumber-picocontainer:$cucumberVersion"
     // CORE
     testImplementation 'org.apache.commons:commons-lang3:3.9'
+    testImplementation 'com.squareup.okhttp3:okhttp:3.12.0'
     testImplementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
     // NEOCOM
