-[NIB02.02] The authorization token corporation identifier does not match the requested corporation. -[BACKEND] Add the pilot corporation identifier to the Credential or to the JWT token so it can be authenticated.
Former-commit-id: eb99bfac17783d59fc3a3682235be76c24a22258

--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.tranquility.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/properties-dev/esiauthorization.tranquility.properties
@@ -1,6 +1,6 @@
 # - DEFINITION FOR THE TRANQUILITY SERVER - SPRING BOOT APPLICATION
 # - NEOCOM INFINITY SPRING BOOT - APISIMULATOR DEVELOPMENT
-P.esi.tranquility.authorization.server=http://localhost:6090
+P.esi.tranquility.authorization.server=http://localhost:6090/
 P.esi.tranquility.authorization.clientid=--cclliieennttiidd--
 P.esi.tranquility.authorization.secretkey=FFTTHHIISSIISSTTHHEESSEECCRREETTFF
 P.esi.tranquility.authorization.callback=http://neocominfinity.poc/app/loginValidation
