--- a/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.App/dependencies.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'net.logstash.logback:logstash-logback-encoder:4.11'
     implementation "joda-time:joda-time:$jodaTimeVersion"
     implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'commons-codec:commons-codec:1.10' // Base64 decoding
     implementation 'com.annimon:stream:1.1.9'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
