-[BACKEND] Dto source code is shared with the acceptance tests implementation. Find a way to keep the code in synch so changes on the main code that will not require a version change are copies to the acceptance project.
Former-commit-id: 622aa6601ac16942fda9db62d60200dd011c56da

--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
@@ -49,5 +49,6 @@ sourceSets {
     test.java {
         srcDirs += "src/test/java-steps"
         srcDirs += "src/test/java-support"
+        srcDirs += 'src/test/java-import-client'
     }
 }
