--- a/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
+++ b/NeoCom.Infinity.Backend/backend.AcceptanceTest/dependencies.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
 dependencyManagement {
@@ -36,13 +36,18 @@ dependencies {
     testImplementation "io.cucumber:cucumber-java:$cucumberVersion"
     testImplementation "io.cucumber:cucumber-junit:$cucumberVersion"
     testImplementation "io.cucumber:cucumber-picocontainer:$cucumberVersion"
-    // CORE
+}
+// - CORE
+dependencies {
     testImplementation 'org.apache.commons:commons-lang3:3.9'
     testImplementation 'com.squareup.okhttp3:okhttp:3.12.0'
     testImplementation "com.squareup.retrofit2:retrofit:$retrofitVersion" // OAuth2 authentication
     testImplementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion" // HTTP encapsulation and swagger support
+    testImplementation 'com.auth0:java-jwt:3.3.0'
     // NEOCOM
-    testImplementation 'org.dimensinfin:NeoCom.DataManagement:0.16.0'
+    implementation 'org.dimensinfin:CoreBase.core:3.2.0'
+    implementation 'org.dimensinfin:ESI.SwaggerApi:4.0.1'
+    implementation 'org.dimensinfin:NeoCom.DataManagement:0.16.0'
 }
 
 sourceSets {
