-[BACKEND][BUG] The initialization of the dependencies to the SDE database fails when executed out of the framework. -[HEROKU] Add the additional project libraries to the heroku deployment. -[HEROKU] Upgrade the configuration to perform a right deployment.
Former-commit-id: 0bb691452c4dcd2b37b3f3b6cd7a51de066063c0

--- a/NeoCom.Infinity.Backend/.gitignore
+++ b/NeoCom.Infinity.Backend/.gitignore
@@ -16,3 +16,9 @@ backend.AcceptanceTest/target/
 
 # Ignore application cache directories from runs
 NeoCom.Infinity.development/
+
+# Ignore the libraries to be deployed fro common repository
+backend.App/gradlew
+backend.App/gradlew.bat
+backend.App/deploy/
+backend.App/gradle/
