--- a/NeoCom.Infinity.Backend/backend.App/Procfile
+++ b/NeoCom.Infinity.Backend/backend.App/Procfile
@@ -1,1 +1,1 @@
-web: java -Dserver.port=$PORT $JAVA_OPTS -jar build/libs/backend.App-0.0.1-SNAPSHOT.jar
+web: java -Dserver.port=$PORT $JAVA_OPTS -jar build/libs/NeoCom.Infinity.Backend-0.16.0.jar
