-[BACKEND] Changed the database configuration. Seems that the heroku does not support additional schemas.
Former-commit-id: 0907813b662dbeca137749f1ef5d4065960aec2b

--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/application-dev.yml
@@ -4,13 +4,7 @@ P:
   runtime:
     configuration:
       properties:
-        path: properties-dev
+        path: "/build/resources/main/properties-dev"
     filesystem:
       application:
         directory: ./NeoCom.Infinity.development
-neocom:
-  sde:
-    database:
-      schema: "jdbc:sqlite:"
-      path: "backend.App/build/resources/main/"
-      name: sde.db
