--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/application.properties
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.name=poc.backend
+server.name=neocom.infinity.backend
 management.endpoints.web.exposure.include=*
 management.endpoints.web.expose=*
 spring.jackson.serialization.indent_output=true
