--- a/NeoCom.Infinity.Backend/backend.App/src/main/resources/db/changelog/ddl-v0.2.1-versions-table.yaml
+++ b/NeoCom.Infinity.Backend/backend.App/src/main/resources/db/changelog/ddl-v0.2.1-versions-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: NeoCom development team. Adam Antinoo main developer.
       changes:
         - createTable:
-            schemaName: neocom
+#            schemaName: neocom
             tableName: Versions
             columns:
               - column:
