-[FRONTEND] Move the application to the /app/ directory so the final URLs match with the expected callbacks.
Former-commit-id: f8ce5cf1d3a3886e5cd0a76f49ceca6e94c0c726

--- a/NeoCom.Infinity.Frontend/package.json
+++ b/NeoCom.Infinity.Frontend/package.json
@@ -10,8 +10,9 @@
     "compodoc": "compodoc -p tsconfig.json --theme laravel",
     "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
     "start:support": "bash ./support/support-services.sh start",
-    "start:dev": "ng serve --progress --proxy-config proxy.conf.json",
-    "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json",
+    "start:dev": "npm run start:support && ng serve --progress --proxy-config proxy.conf.json --base-href /app",
+    "start:aot": "ng serve --aot --progress --public-host neocom.infinity.dimensinfin.org --proxy-config proxy.conf.json --base-href /app",
+    "start:prod": "ng serve --base-href /app",
     "cucumber": "./node_modules/cucumber/bin/cucumber-js e2e/src/features/",
     "stop:support": "bash ./support/support-services.sh stop",
     "restart:support": "npm run stop:support && npm run start:support",
